After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 767293 - ges-uri-asset: GstDiscoverer can return a valid info but a non-OK result, consider this an error
ges-uri-asset: GstDiscoverer can return a valid info but a non-OK result, con...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-editing-services
unspecified
Other All
: Normal normal
: 1.8.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-06-06 14:45 UTC by Sebastian Dröge (slomo)
Modified: 2016-06-07 07:08 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
ges-uri-asset: GstDiscoverer can return a valid info but a non-OK result, consider this an error (1.60 KB, patch)
2016-06-06 14:45 UTC, Sebastian Dröge (slomo)
committed Details | Review

Description Sebastian Dröge (slomo) 2016-06-06 14:45:38 UTC
See commit message
Comment 1 Sebastian Dröge (slomo) 2016-06-06 14:45:42 UTC
Created attachment 329200 [details] [review]
ges-uri-asset: GstDiscoverer can return a valid info but a non-OK result, consider this an error

The asynchronous case in ges_uri_clip_asset_request_async() already considered
it an error, do the same in ges_uri_clip_asset_request_sync().
Comment 2 Sebastian Dröge (slomo) 2016-06-06 14:46:48 UTC
Review of attachment 329200 [details] [review]:

::: ges/ges-uri-asset.c
@@ +538,3 @@
     gst_object_unref (asset);
+    if (info)
+      gst_discoverer_info_unref (info);

Also stops leaking the info ;)
Comment 3 Sebastian Dröge (slomo) 2016-06-06 18:25:08 UTC
Attachment 329200 [details] pushed as 90b5735 - ges-uri-asset: GstDiscoverer can return a valid info but a non-OK result, consider this an error