ges-uri-asset: GstDiscoverer can return a valid info but a non-OK result, consider this an error

The asynchronous case in ges_uri_clip_asset_request_async() already considered
it an error, do the same in ges_uri_clip_asset_request_sync().

https://bugzilla.gnome.org/show_bug.cgi?id=767293